syntax = "proto3";

package hello.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "v1/hello";
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "grpcapp";
    version: "v0.0.1";
    contact: {
      name: "grpcapp";
      url: "https://github.com/helin0815/gowebmonitor/grpcapp";
    };
  };
};

service HelloService {
  rpc SayHello(SayHelloRequest) returns (SayHelloResponse) {
    option (google.api.http) = {
      get: "/api/v1/hello-messages"
    };
  }
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string message = 1;
}